# sensirion-async

./: .gitignore  Cargo.toml
examples/embassy-nrf/: Cargo.toml  memory.x  rust-toolchain.toml
examples/embassy-nrf/.cargo/: config.toml
src/: lib.rs  scd4x.rs  sgp40.rs
