[package]
name = "sensirion-async"
version = "0.1.0"
edition = "2021"

[features]
defmt = ["dep:defmt", "embedded-hal-async/defmt-03"]

[dependencies]
embedded-hal-async = { version = "1.0.0" }
defmt = { version = "0.3", optional = true }

crc_all = "0.2.0"
fixed = "1"
fixed-sqrt = "0.2"

getset = "0.1.2"
