[package]
name = "example-embassy-nrf"
version = "0.1.0"
edition = "2021"

[dependencies]

embassy-executor = { version = "0.5.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]}
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"]}
embassy-nrf = { version = "0.1.0", features = ["defmt", "gpiote", "time-driver-rtc1", "nrf52840", "time", "unstable-pac" ]}

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"

defmt = { version = "0.3" }
defmt-rtt = { version = "0.3" }
panic-probe = { version = "0.3", features = ["print-defmt"] }

sensirion-async = { path = "../../../sensirion-async", features = ["defmt"] }

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

